# OOP-Project

./: .gitignore  CMakeLists.txt  Makefile  Pokemon.cpp  Renderable.h  bot.cpp  bot.hpp  button.cpp  button.hpp  buttonTest  game_container.cpp  game_container.hpp  game_state.cpp  game_state.hpp  generateRandomPokemon.cpp  generateRandomPokemon.hpp  json.cpp  json.hpp  jsonTest  main.cpp  main_menu.cpp  main_menu.hpp  menu.cpp  menu.hpp  move.cpp  move.hpp  player.cpp  player.hpp  pokemon.cpp  pokemon.hpp  readPokemonTeam.cpp  readPokemonTeam.hpp  readme.md  renderable.cpp  renderable.hpp  sprites.cpp  sprites.hpp  stats.cpp  stats.hpp  test.sh  (+4 more)
Mainmenu_test/: menu  menu.cpp
Tests/: CMakeLists.txt  buttonTest.cpp  jsonTest.cpp  moveTest.cpp  pokemonTest.cpp  pokemon_Stat_Test.cpp  statsTest.cpp
resources/: generateJSON.py  generateJSONmoves.py  generateJSONsprites.py  moveList.json  pokemonList.json
resources/playerTeams/: testTeam.json
